pascal/quickjs.pas

unit quickjs;

{$mode objfpc}{$H+}
{$packrecords c}

interface

uses
  ctypes, SysUtils;

const
  {$IFDEF WINDOWS}
  libqjs = 'libqjs.dll';
  {$ELSE}
  libqjs = 'libqjs.so';
  {$ENDIF}

  // Tags
  JS_TAG_FIRST = -9;
  JS_TAG_BIG_INT = -9;
  JS_TAG_SYMBOL = -8;
  JS_TAG_STRING = -7;
  JS_TAG_MODULE = -3;
  JS_TAG_FUNCTION_BYTECODE = -2;
  JS_TAG_OBJECT = -1;
  JS_TAG_INT = 0;
  JS_TAG_BOOL = 1;
  JS_TAG_NULL = 2;
  JS_TAG_UNDEFINED = 3;
  JS_TAG_UNINITIALIZED = 4;
  JS_TAG_CATCH_OFFSET = 5;
  JS_TAG_EXCEPTION = 6;
  JS_TAG_SHORT_BIG_INT = 7;
  JS_TAG_FLOAT64 = 8;

  // Eval flags
  JS_EVAL_TYPE_GLOBAL = 0;
  JS_EVAL_TYPE_MODULE = 1;
  JS_EVAL_TYPE_DIRECT = 2;
  JS_EVAL_TYPE_INDIRECT = 3;
  JS_EVAL_TYPE_MASK = 3;
  JS_EVAL_FLAG_STRICT = 8;
  JS_EVAL_FLAG_STRIP = 16;
  JS_EVAL_FLAG_COMPILE_ONLY = 32;
  JS_EVAL_FLAG_BACKTRACE_BARRIER = 64;
  JS_EVAL_FLAG_ASYNC = 128;

  // Read object flags
  JS_READ_OBJ_BYTECODE = 1;
  JS_READ_OBJ_REFERENCE = 2;
  JS_READ_OBJ_ROM_DATA = 4;

  // Write object flags
  JS_WRITE_OBJ_BYTECODE = 1;
  JS_WRITE_OBJ_REFERENCE = 2;
  JS_WRITE_OBJ_BSWAP = 4;
  JS_WRITE_OBJ_SAB = 8;
  JS_WRITE_OBJ_DEBUG = 16;

  // Property flags
  JS_PROP_CONFIGURABLE = 1;
  JS_PROP_WRITABLE = 2;
  JS_PROP_ENUMERABLE = 4;
  JS_PROP_C_W_E = 7;  // JS_PROP_CONFIGURABLE or JS_PROP_WRITABLE or JS_PROP_ENUMERABLE
  JS_PROP_LENGTH = 8;
  JS_PROP_TMASK = 48;  // 3 shl 4
  JS_PROP_NORMAL = 0;
  JS_PROP_GETSET = 16;  // 1 shl 4
  JS_PROP_VARREF = 32;  // 2 shl 4
  JS_PROP_AUTOINIT = 48;  // 3 shl 4
  JS_PROP_HAS_SHIFT = 8;
  JS_PROP_HAS_GET = 256;  // 1 shl 8
  JS_PROP_HAS_SET = 512;  // 1 shl 9
  JS_PROP_HAS_CONFIGURABLE = 1024;  // 1 shl 10
  JS_PROP_HAS_ENUMERABLE = 2048;  // 1 shl 11
  JS_PROP_HAS_WRITABLE = 4096;  // 1 shl 12
  JS_PROP_HAS_VALUE = 8192;  // 1 shl 13

  // Class flags (simplified - only common ones)
  JS_CLASS_HAS_PRIVATE = 1;
  JS_CLASS_HAS_BYTECODE_FUNCTION = 2;
  JS_CLASS_HAS_NAME = 4;
  JS_CLASS_IS_SCRIPTED = 8;
  JS_CLASS_IS_EXOTIC = 16;
  JS_CLASS_IS_GENERIC_FUNCTION = 32;
  JS_CLASS_IS_FUNCTION = 64;
  JS_CLASS_IS_CONSTRUCTOR = 128;

type
  // Basic types
  JSRuntime = record end;
  JSContext = record end;
  JSObject = record end;
  JSClass = record end;
  JSClassID = cuint32;
  JSAtom = cuint32;
  JSModuleDef = record end;

  // Pointer types
  PJSRuntime = ^JSRuntime;
  PJSContext = ^JSContext;
  PJSObject = ^JSObject;
  PJSClass = ^JSClass;
  PJSModuleDef = ^JSModuleDef;

  // JSValue - 16 bytes struct (non-NAN_BOXING, like C when JS_NAN_BOXING=0)
  JSValueUnion = record
    case cint of
      0: (int32: cint32);
      1: (float64: cdouble);
      2: (ptr: pointer);
  end;

  JSValue = record
    u: JSValueUnion; // 8 bytes
    tag: cint64;     // 8 bytes
  end;

  JSValueConst = JSValue;
  PJSValue = ^JSValue;
  PJSValueConst = ^JSValueConst;

  // Pointer types for primitive types (needed for callback types)
  Pcint = ^cint;
  Pcint32 = ^cint32;
  Pcint64 = ^cint64;
  Pcuint32 = ^cuint32;
  Pcuint64 = ^cuint64;
  Pcdouble = ^cdouble;
  Pcsize_t = ^csize_t;
  Pcuint8 = ^cuint8;
  PJSClassID = ^JSClassID;
  PPJSContext = ^PJSContext;

  // Forward declarations for types defined later
  JSPropertyEnum = record
    is_enumerable: cint;
    atom: JSAtom;
  end;
  PJSPropertyEnum = ^JSPropertyEnum;
  PPJSPropertyEnum = ^PJSPropertyEnum;

  JSModuleInitFunc = function(ctx: PJSContext; m: PJSModuleDef): cint; cdecl;

  // Callback types
  JSFreeArrayBufferDataFunc = procedure(rt: PJSRuntime; opaque: pointer; ptr: pointer); cdecl;
  JSInterruptHandler = function(rt: PJSRuntime; opaque: pointer): cint; cdecl;
  JSModuleNormalizeFunc = function(ctx: PJSContext; module_base_name: PChar; module_name: PChar; opaque: pointer): PChar; cdecl;
  JSModuleLoaderFunc = function(ctx: PJSContext; module_name: PChar; opaque: pointer): PJSModuleDef; cdecl;
  JSCFunction = function(ctx: PJSContext; this_val: JSValueConst; argc: cint; argv: PJSValueConst): JSValue; cdecl;
  JSCFunctionMagic = function(ctx: PJSContext; this_val: JSValueConst; argc: cint; argv: PJSValueConst; magic: cint): JSValue; cdecl;
  JSCFunctionData = function(ctx: PJSContext; this_val: JSValueConst; argc: cint; argv: PJSValueConst; magic: cint; data: PJSValue): JSValue; cdecl;
  JSFinalizer = procedure(rt: PJSRuntime; val: JSValue); cdecl;
  JSGCMarkFunc = procedure(rt: PJSRuntime; val: JSValue; mark_func: pointer); cdecl;
  JSHasPropertyFunc = function(ctx: PJSContext; obj: JSValueConst; atom: JSAtom): cint; cdecl;
  JSGetPropertyFunc = function(ctx: PJSContext; obj: JSValueConst; atom: JSAtom; receiver: JSValueConst): JSValue; cdecl;
  JSSetPropertyFunc = function(ctx: PJSContext; obj: JSValueConst; atom: JSAtom; val: JSValueConst; receiver: JSValueConst; flags: cint): cint; cdecl;
  JSDeletePropertyFunc = function(ctx: PJSContext; obj: JSValueConst; atom: JSAtom): cint; cdecl;
  JSGetOwnPropertyNamesFunc = function(ctx: PJSContext; ptab: Pcint; plen: Pcuint32; obj: JSValueConst): cint; cdecl;
  JSGetOwnPropertyFunc = function(ctx: PJSContext; desc: pointer; obj: JSValueConst; atom: JSAtom): cint; cdecl;
  JSCallConstructorFunc = function(ctx: PJSContext; func_obj: JSValueConst; new_target: JSValueConst; argc: cint; argv: PJSValueConst): JSValue; cdecl;
  JSHasInstanceFunc = function(ctx: PJSContext; func_obj: JSValueConst; val: JSValueConst): cint; cdecl;
  JSCallFunc = function(ctx: PJSContext; func_obj: JSValueConst; this_val: JSValueConst; argc: cint; argv: PJSValueConst): JSValue; cdecl;
  JSGetArrayBufferFunc = function(ctx: PJSContext; opaque: pointer; psize: Pcsize_t): pointer; cdecl;
  JSIsHTMLDDA = function(ctx: PJSContext; obj: JSValueConst): cint; cdecl;

// Special value constructors (JS_UNDEFINED, JS_NULL, ...)
function JS_UNDEFINED: JSValue; inline;
function JS_NULL: JSValue; inline;
function JS_FALSE: JSValue; inline;
function JS_TRUE: JSValue; inline;
function JS_EXCEPTION: JSValue; inline;
function JS_UNINITIALIZED: JSValue; inline;

  // Runtime functions
function JS_NewRuntime: PJSRuntime; cdecl; external libqjs;
procedure JS_FreeRuntime(rt: PJSRuntime); cdecl; external libqjs;
function JS_NewContext(rt: PJSRuntime): PJSContext; cdecl; external libqjs;
procedure JS_FreeContext(ctx: PJSContext); cdecl; external libqjs;
function JS_GetRuntime(ctx: PJSContext): PJSRuntime; cdecl; external libqjs;

// Memory management
procedure JS_SetRuntimeOpaque(rt: PJSRuntime; opaque: pointer); cdecl; external libqjs;
function JS_GetRuntimeOpaque(rt: PJSRuntime): pointer; cdecl; external libqjs;
procedure JS_SetContextOpaque(ctx: PJSContext; opaque: pointer); cdecl; external libqjs;
function JS_GetContextOpaque(ctx: PJSContext): pointer; cdecl; external libqjs;

// Value operations
// JS_NewBool / JS_NewInt32 / JS_NewInt64 / JS_NewFloat64 là static inline trong quickjs.h,
// nên KHÔNG được export từ DLL. Ta tự implement trong Pascal cho đúng layout JSValue.
function JS_NewInt32(ctx: PJSContext; val: cint32): JSValue; cdecl;
function JS_NewInt64(ctx: PJSContext; val: cint64): JSValue; cdecl;
function JS_NewBool(ctx: PJSContext; val: cint): JSValue; cdecl;
function JS_NewFloat64(ctx: PJSContext; val: cdouble): JSValue; cdecl;
function JS_NewString(ctx: PJSContext; str: PChar): JSValue; cdecl;
function JS_NewStringLen(ctx: PJSContext; str: PChar; len: csize_t): JSValue; cdecl; external libqjs;
function JS_NewObject(ctx: PJSContext): JSValue; cdecl; external libqjs;
function JS_NewObjectProto(ctx: PJSContext; proto: JSValueConst): JSValue; cdecl; external libqjs;
function JS_NewObjectClass(ctx: PJSContext; class_id: JSClassID): JSValue; cdecl; external libqjs;
function JS_NewArray(ctx: PJSContext): JSValue; cdecl; external libqjs;
function JS_NewPromiseCapability(ctx: PJSContext; resolving_funcs: PJSValue): JSValue; cdecl; external libqjs;

procedure JS_FreeValue(ctx: PJSContext; v: JSValue); cdecl; external libqjs;
procedure JS_FreeValueRT(rt: PJSRuntime; v: JSValue); cdecl; external libqjs;

function JS_DupValue(ctx: PJSContext; v: JSValueConst): JSValue; cdecl; external libqjs;
function JS_DupValueRT(rt: PJSRuntime; v: JSValueConst): JSValue; cdecl; external libqjs;

// Value checks
  function JS_IsUndefined(v: JSValueConst): cint; cdecl;
  function JS_IsNull(v: JSValueConst): cint; cdecl;
  function JS_IsBool(v: JSValueConst): cint; cdecl;
  function JS_IsNumber(v: JSValueConst): cint; cdecl;
  function JS_IsBigInt(v: JSValueConst): cint; cdecl;
  function JS_IsString(v: JSValueConst): cint; cdecl;
  function JS_IsObject(v: JSValueConst): cint; cdecl;
  function JS_IsArray(ctx: PJSContext; v: JSValueConst): cint; cdecl; external libqjs;
  function JS_IsException(v: JSValueConst): cint; cdecl;
  function JS_IsUninitialized(v: JSValueConst): cint; cdecl;
function JS_IsFunction(ctx: PJSContext; v: JSValueConst): cint; cdecl; external libqjs;
function JS_IsConstructor(ctx: PJSContext; v: JSValueConst): cint; cdecl; external libqjs;

// Value conversions
function JS_ToBool(ctx: PJSContext; val: JSValueConst): cint; cdecl; external libqjs;
function JS_ToInt32(ctx: PJSContext; pres: Pcint32; val: JSValueConst): cint; cdecl; external libqjs;
function JS_ToInt64(ctx: PJSContext; pres: Pcint64; val: JSValueConst): cint; cdecl; external libqjs;
function JS_ToIndex(ctx: PJSContext; plen: Pcuint64; val: JSValueConst): cint; cdecl; external libqjs;
function JS_ToFloat64(ctx: PJSContext; pres: Pcdouble; val: JSValueConst): cint; cdecl; external libqjs;
// In quickjs.h only JS_ToCStringLen2 is exported; JS_ToCStringLen / JS_ToCString are inline wrappers.
function JS_ToCStringLen2(ctx: PJSContext; plen: Pcsize_t; val: JSValueConst; cesu8: cint): PChar; cdecl; external libqjs;
function JS_ToCStringLen(ctx: PJSContext; plen: Pcsize_t; val: JSValueConst): PChar; cdecl;
function JS_ToCString(ctx: PJSContext; val: JSValueConst): PChar; cdecl;
procedure JS_FreeCString(ctx: PJSContext; ptr: PChar); cdecl; external libqjs;
